Update to support headless rendering and cleanup
Enhanced the CommandEncoder.js with copyTextureToBuffer implementation. AssetManager reference was removed from classes under scenes. Furthermore, the files required to implement headless rendering were updated both in jsMain and commonMain. This also included an update in the Application.kt file to enable the new feature. Lastly, all warnings were uncommented out from the compilerOptions in Application.kt.